# tct

./: CMakeLists.txt  LICENCE  README.md  README.zh.md  build-win32.bat  copybin-win32.bat  copybins.bat  count-self.bat  中文README.md
src/: bufout.cpp  bufout.h  command.cpp  command.h  file.cpp  file.h  opts.h  tcout.cpp  tcout.h  tct.cpp  tct.h  utils.cpp  utils.h
